<resources>
    <string name="app_name">Blitz Calc Session</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="session">Session</string>
    <string name="history">History</string>
    <string name="refresh_button">refresh_button</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="more_button">more button</string>
    <string name="search">Search</string>
    <string name="search_icon">search icon</string>
    <string name="trash_icon">trash icon</string>
    <string name="national_flag">national flag</string>
    <string name="favourite_tank">Favourite Tank</string>
    <string name="tank_name">Tank Name</string>
    <string name="avg_damage">Avg damage:</string>
    <string name="of_wins">% of wins:</string>
    <string name="battles">Battles:</string>
    <string name="total">Total</string>
    <string name="arrow_right">arrow right</string>
    <string name="your_nickname">Your nickname</string>
    <string name="region">Region</string>
    <string name="dots">…</string>
    <string name="_0">0%</string>
    <string name="back_arrow">back arrow</string>
    <string name="calendar">calendar</string>
    <string name="select_all_button">select all button</string>
    <string name="player_info_loading">player info loading</string>
</resources>