<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardTotal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="@drawable/ripple"
    app:cardBackgroundColor="#FFFFFF"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/totalTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#646464"
            android:paddingStart="15dp"
            android:paddingTop="3dp"
            android:paddingEnd="15dp"
            android:paddingBottom="3dp"
            android:text="@string/total"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/totalStatisticShimmer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:shimmer_auto_start="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/totalAvgDamageLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/avg_damage"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/totalAvgDamageValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/dots"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/totalPercentageOfWinsLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/of_wins"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/totalPercentageOfWinsValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/dots"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/totalNumberOfBattlesLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/battles"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/totalNumberOfBattlesValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/dots"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

                <ImageView
                    android:id="@+id/showDetailsButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/arrow_right"
                    android:padding="10dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/arrow_right"
                    app:tint="#646464" />

            </LinearLayout>

        </com.facebook.shimmer.ShimmerFrameLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>