<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardFavourite"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#FFFFFF"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/favouriteTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#646464"
            android:paddingStart="15dp"
            android:paddingTop="3dp"
            android:paddingEnd="15dp"
            android:paddingBottom="3dp"
            android:text="@string/favourite_tank"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/favouriteTankShimmer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:shimmer_auto_start="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/nationPreview"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/national_flag"
                        android:scaleType="centerCrop"
                        android:src="@drawable/transparent"
                        app:srcCompat="@drawable/transparent" />

                    <ImageView
                        android:id="@+id/tankPreview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:background="#CB000000"
                        android:contentDescription="@string/favourite_tank"
                        app:srcCompat="@drawable/transparent" />

                    <TextView
                        android:id="@+id/tankTier"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:textColor="#BDBAAC"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </FrameLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/favouriteName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#C4C4C4"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:paddingTop="3dp"
                        android:paddingBottom="3dp"
                        android:text="@string/tank_name"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="5dp"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/avgDamageLabel"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/avg_damage"
                                android:textColor="@color/black"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/avgDamageValue"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:text="@string/dots"
                                android:textColor="@color/black"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/percentageOfWinsLabel"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/of_wins"
                                android:textColor="@color/black"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/percentageOfWinsValue"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:text="@string/dots"
                                android:textColor="@color/black"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/numberOfBattlesLabel"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/battles"
                                android:textColor="@color/black"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/numberOfBattlesValue"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:text="@string/dots"
                                android:textColor="@color/black"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </com.facebook.shimmer.ShimmerFrameLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
