<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.history.HistoryFragment" >

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingTop="15dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#909090"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/selectAllButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/select_all_button"
        android:foreground="@drawable/circle_ripple"
        android:padding="7dp"
        android:scaleType="fitCenter"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:srcCompat="@drawable/ic_circle" />

    <TextView
        android:id="@+id/numberOfSelectedItems"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:gravity="start|center_vertical"
        android:textAlignment="gravity"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/selectAllButton"
        app:layout_constraintEnd_toStartOf="@id/deleteAllButton"
        app:layout_constraintStart_toEndOf="@id/selectAllButton"
        app:layout_constraintTop_toTopOf="@id/selectAllButton" />

    <ImageButton
        android:id="@+id/calendar"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/calendar"
        android:foreground="@drawable/circle_ripple"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_calendar"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@id/toolbar"
        app:layout_constraintTop_toTopOf="@id/toolbar" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchLine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:iconifiedByDefault="true"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toStartOf="@+id/deleteAllButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/calendar"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:queryBackground="@drawable/search_line_custom"
        app:queryHint="Search by tank"
        app:searchHintIcon="@null" />

    <ImageButton
        android:id="@+id/deleteAllButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/trash_icon"
        android:foreground="@drawable/circle_ripple"
        android:padding="7dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_delete_all"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="10dp"
        android:background="@drawable/shadow_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

</androidx.constraintlayout.widget.ConstraintLayout>